crates/strider-analyze/tests/snapshots/v2__aarch64__calls__main.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x6:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x860:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x8b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x8e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "33" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x910:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "33" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "39" -> "33" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "40" -> "33" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "41" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "33" -> "41" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x924:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" -> "41" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x7e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v45" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v45" [color="#888888", style=dashed];
  "v45" -> "41" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "47" -> "41" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "48" -> "41" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "49" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "41" -> "49" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v53" [color="#888888", style=dashed];
  "v53" -> "49" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v54" [color="#888888", style=dashed];
  "v54" -> "49" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "52" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v58" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v58" [color="#888888", style=dashed];
  "v58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "41" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "50" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v65" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v65" [color="#888888", style=dashed];
  "v65" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "33" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "47" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "33" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "42" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "42" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v69" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v69" [color="#888888", style=dashed];
  "v69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "25" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "68" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v73" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v73" [color="#888888", style=dashed];
  "v73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "72" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "17" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v77" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v77" [color="#888888", style=dashed];
  "v77" -> "76" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "9" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "75" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "76" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "9" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v78" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v78" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "80" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v81" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v81" [color="#888888", style=dashed];
  "v81" -> "80" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "79" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "80" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "1" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "10" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← x3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "83" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "83" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "83" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "88" -> "83" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "86" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "89" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v90" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v90" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "91" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "91" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "89" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
